[gd_scene load_steps=3 format=3 uid="uid://chexd4cj6rmh8"]

[ext_resource type="Script" uid="uid://csx227nq46usa" path="res://scenes/ui/ui.gd" id="1_tg4cr"]
[ext_resource type="Texture2D" uid="uid://b1eq4l1aklwhu" path="res://assets/art/ui/flags/flag-placeholder.png" id="1_v2lfg"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_tg4cr")

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UIContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -14.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="UIContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="PlayerLabel" type="Label" parent="UIContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.807843, 0.807843, 1)
text = "asdasd"

[node name="HomeFlagTexture" type="TextureRect" parent="UIContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
texture = ExtResource("1_v2lfg")

[node name="ScoreLabel" type="Label" parent="UIContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
horizontal_alignment = 1

[node name="AwayFlagTexture" type="TextureRect" parent="UIContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 14)
layout_mode = 2
texture = ExtResource("1_v2lfg")

[node name="TimeLabel" type="Label" parent="UIContainer/ColorRect/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.807843, 0.807843, 0.807843, 1)
text = "01:22"
horizontal_alignment = 2
